corrected all text align

--- a/style.css
+++ b/style.css
@@ -33,14 +33,14 @@
   margin: 0;
   box-sizing: border-box;
   font: inherit;
-  text-align: inherit;
+  text-align: center;
 }
 
-@media (max-width: 375px) {
+/* @media (max-width: 375px) {
   * {
     text-align: center;
   }
-}
+} */
 
 body {
   font-size: 18px;
@@ -268,14 +268,17 @@ section {
     flex-direction: row;
   }
   .hero .hero-content {
+    text-align: left;
     min-width: 50%;
     order: 0;
   }
   .hero .hero-content h1 {
+    text-align: left;
     margin-top: 5rem;
     font-size: 4.6rem;
   }
   .hero .hero-content .message {
+    text-align: left;
     font-size: 1.3rem;
     margin-top: 0;
     font-weight: 500;
@@ -458,6 +461,7 @@ section {
 .features {
   position: relative;
   margin-top: 6rem;
+  text-align: center;
 }
 .features .features-title {
   font-size: 1.5rem;
